commit client ui + code#1

--- a/Bookashka/Form1.resx
+++ b/Bookashka/Form1.resx
@@ -120,43 +120,43 @@
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAALQAAAC0CAYAAAA9zQYyAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAgwSURBVHhe7ZxpqG1lHYcvIgQGfQ2qD81QHwr8ZBBGIRWUJZXaSGWRmDaQGkkDWUJlGlopTUYZ
-        WVlUUjkmolZaqQ1q86SpmZqzZk71/KgLh8vf9uvrfvdZa5/ngQdB7t177f957t5rrffdZ5uIiIiIiIiI
-        iIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIbApX4582
-        +Gf8Pf4UL8BT8Kv4CTwSD8Xno4xnNzwEM/fM/8t4Ml6EP8L8rDb+7P6CF+NLcMvy7yV4M/4W8w/gG3gM
-        fhTfinvhw1H+y0vxQMx8jsWTMG8el+MtWM33wXgDvgK3LNVQluVtmE+AX+MleCq+Bx+HW4FH4vsw/8h/
-        hpfh3/BWrOa1DP+OL8ctSzWUkd6H9+BdmI/Hz+AbMe/kc2YPzDtvTg0S7x2Y15nXW81hlAY9EW/CfPR+
-        C9+Nc+AAzKdOTrWuwep1rVqDnqD/xH9gLnz2wynxGjwDb8TbsTr+zdSgZ2A+vr+PR+MTcNV8BPNOPMWA
-        d9SgZ+S9eCV+D1fBd/EKzLlwdTxT1KBnbE5JDsOdcFnkLsyFWD3fHDTomXs//hI/hA+FI/BSrJ5jThr0
-        mpjbY1fhq/HBcBBmlW3Vt9dGadBraJaGFy3/7oNnY/X356xBr6lZjv88VhyFWcWs/t7cNeg1N+fF+2LI
-        at46nCf/Pw16C3g95m7IdRv+37pq0J1muTfsjC/Aw/FEzHlploGvxez8ymLEnO7jjjQXnjnVySpjwss9
-        9XMxp0YfxD1xFwzZ0FQ9xiINutMf4yKeggdjNuychlnt+wNm5a96zHXzTvwdnodZDDoBs4HpmbiI7Gmp
-        HnORBt1pS9AVu2LuQGSH3WcxdyTu/p/V88zF7TsIs685Owj3x7zOp2EPBt1JNZQWe4N+IPLDzzdjsm86
-        95Or55ya2ducLbCJ7w24TAy6k2ooLS476I3knDwrd1/HqW0IyunS6ZiN+3vjKAy6k2ooLY4Mekd2x3Mw
-        336pjmWkWVrPRe75mIu2VWHQnVRDaXGVQW/nyXg85rmrY1q22fx0HOa8f9UYdCfVUFrcjKA38gg8E5f9
-        /bw8Xj4NnoebiUF3Ug2lxc0OejtPxNwSyzdcquNsNfeGs//5WTgFDLqTaigtTiXo7eR3WGQxpzrWReaW
-        YZbFp4RBd1INpcWpBR3+itWxLjLfYZwaBt1JNZQWDXosBt1JNZQWDXosBt1JNZQWDXosBt1JNZQWDXos
-        Bt1JNZQWDXosBt1JNZQWDXosBt1JNZQWDXosBt1JNZQWDXosBt1JNZQWDXosBt1JNZQWDXosBt1JNZQW
-        DXosBt1JNZQWDXosBt1JNZQWDXosBt1JNZQWDXosBt1JNZQWDXosBt1JNZQWDXosBt1JNZQWDXosBt1J
-        NZQWDXosBt1JNZQWDXosBt1JNZQWDXosBt1JNZQWDXosBt1JNZQWDXosBt1JNZQWDXosBt1JNZQWDXos
-        Bt1JNZQWDXosBt1JNZQWDXosBt1JNZQWDXosBt1JNZQWDXosBt1JNZQWDXosBt1JNZQWDXosBt1JNZQW
-        DXosBt1JNZQWDXosBt1JNZQWDXosBt1JNZQWDXosBt1JNZQWDXosBt1JNZQWDXosBt1JNZQWDXosBt1J
-        NZQWDXosBt1JNZQWDXosBt1JNZQWDXosBt1JNZQWDXosBt1JNZQWDXosBt1JNZQWDXosBt1JNZQWDXos
-        Bt1JNZQWDXosBt1JNZQWDXosBt1JNZQWL8SpsU5BfxOrY12kQXd6EU6NdQr6FKyOdZEG3el9mBDuwpvw
-        MjwTv4SH4n64D+6Gj8JVMPWgd8JnYOaS+WROX8Cz8Od4C2aeOZ57sDrWRRr0QP+FV+Av8HTMx+h78bk4
-        gqkF/WzM683rzuvPp1rmkblUx7EMDXrF3ol5R78WL8CjcWdcBpsd9OPxcMzrug5vxLze6jlHadATMR+3
-        5+IJ+DbsYdVB74853rPxeqwee9Ua9ARN3H/EfEw/B1tZRdC743cwx5d34OrxNlODnoE5RfkaHoS74AMx
-        Kug87xfxVqz+/pQ06Bl5N16KJ2HFsoNOxLmgHXkRt2wNeqbm9lbuHmw8JVlG0HtiHjefCvdj9eenrEHP
-        3Lxr5/733phbYtWfWeTt+CLM48wx4o0a9Jp4M/aeGtyLU7zA69Ggda00aF0rDVrXygS9L25JslmmGorO
-        11xLvBa3LG/BA3YwCwnvxMMwey2Ox2/jaZjl6YsxF1G5w5ALsfw3F1bZgTf3uwSbYeaW+W2fZ8w7be65
-        n4enYraT5ufwcTwE34UH4saf25vx9fhYlIfIK/ED+Gn8ISb6y/EqzFJ29YPcaub2YObxK8x8zscT8f34
-        OpQZkIWKvJN8DI/DH+A1WP3A183suEu0n8Mj8e34QnwYyhryYvwUXolX4x1YhTF1s9KYf6S/wZPxZShb
-        nCdhNsNnE9JPMJFU8UzFnPPmtOEreAQ+FUUekKfjmzDfLs8ut1wwVWGtygScOwiX4DtwVxTp5ijMN0FW
-        vZH+Nsx5cE6NRJbOXngs3oBVgMsyj38MvgpFVkLuGuQ8Nu+iVZQP1mxJzbevcx9eZNPIdxCz4FNF2uo5
-        mMUKkUmRRYvWC8hc6OUibw8UmSwfxkWb/fNrFD6JIrPgMZj9Dztu+s9ekzPw0SgyOw7GLEEn5uwpyb4J
-        kVmTW3353XsuSYuIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIhMl23b
-        /gOg/6vevM2yHQAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAALQAAAC0CAYAAAA9zQYyAAAABGdBTUEAALGPC/xhBQAACDBJREFUeF7t
+        nGmobWUdhy8iBAZ9DaoPzVAfCvxkEEYhFZQlldpIZZGYNpAaSQNZQmUaWilNRhlZWVRSOSaiVlqpDWrz
+        pKmZmrNmTvX8qAuHy9/26+t+91lrn+eBB0Hu3Xvt/3nu3mut991nm4iIiIiIiIiIiIiIiIiIiIiIiIiI
+        iIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIhsClfjnzb4Z/w9/hQvwFPwq/gJ
+        PBIPxeejjGc3PAQz98z/y3gyXoQ/wvysNv7s/oIX40twy/LvJXgz/hbzD+AbeAx+FN+Ke+HDUf7LS/FA
+        zHyOxZMwbx6X4y1YzffBeAO+Arcs1VCW5W2YT4Bf4yV4Kr4HH4dbgUfi+zD/yH+Gl+Hf8Fas5rUM/44v
+        xy1LNZSR3of34F2Yj8fP4Bsx7+RzZg/MO29ODRLvHZjXmddbzWGUBj0Rb8J89H4L341z4ADMp05Ota7B
+        6nWtWoOeoP/Ef2AufPbDKfEaPANvxNuxOv7N1KBnYD6+v49H4xNw1XwE8048xYB31KBn5L14JX4PV8F3
+        8QrMuXB1PFPUoGdsTkkOw51wWeQuzIVYPd8cNOiZez/+Ej+ED4Uj8FKsnmNOGvSamNtjV+Gr8cFwEGaV
+        bdW310Zp0GtoloYXLf/ug2dj9ffnrEGvqVmO/zxWHIVZxaz+3tw16DU358X7Yshq3jqcJ/8/DXoLeD3m
+        bsh1G/7fumrQnWa5N+yML8DD8UTMeWmWga/F7PzKYsSc7uOONBeeOdXJKmPCyz31czGnRh/EPXEXDNnQ
+        VD3GIg260x/jIp6CB2M27JyGWe37A2blr3rMdfNO/B2eh1kMOgGzgemZuIjsaakec5EG3WlL0BW7Yu5A
+        ZIfdZzF3JO7+n9XzzMXtOwizrzk7CPfHvM6nYQ8G3Uk1lBZ7g34g8sPPN2Oybzr3k6vnnJrZ25wtsInv
+        DbhMDLqTaigtLjvojeScPCt3X8epbQjK6dLpmI37e+MoDLqTaigtjgx6R3bHczDffqmOZaRZWs9F7vmY
+        i7ZVYdCdVENpcZVBb+fJeDzmuatjWrbZ/HQc5rx/1Rh0J9VQWtyMoDfyCDwTl/39vDxePg2eh5uJQXdS
+        DaXFzQ56O0/E3BLLN1yq42w194az//lZOAUMupNqKC1OJejt5HdYZDGnOtZF5pZhlsWnhEF3Ug2lxakF
+        Hf6K1bEuMt9hnBoG3Uk1lBYNeiwG3Uk1lBYNeiwG3Uk1lBYNeiwG3Uk1lBYNeiwG3Uk1lBYNeiwG3Uk1
+        lBYNeiwG3Uk1lBYNeiwG3Uk1lBYNeiwG3Uk1lBYNeiwG3Uk1lBYNeiwG3Uk1lBYNeiwG3Uk1lBYNeiwG
+        3Uk1lBYNeiwG3Uk1lBYNeiwG3Uk1lBYNeiwG3Uk1lBYNeiwG3Uk1lBYNeiwG3Uk1lBYNeiwG3Uk1lBYN
+        eiwG3Uk1lBYNeiwG3Uk1lBYNeiwG3Uk1lBYNeiwG3Uk1lBYNeiwG3Uk1lBYNeiwG3Uk1lBYNeiwG3Uk1
+        lBYNeiwG3Uk1lBYNeiwG3Uk1lBYNeiwG3Uk1lBYNeiwG3Uk1lBYNeiwG3Uk1lBYNeiwG3Uk1lBYNeiwG
+        3Uk1lBYNeiwG3Uk1lBYNeiwG3Uk1lBYNeiwG3Uk1lBYNeiwG3Uk1lBYNeiwG3Uk1lBYNeiwG3Uk1lBYN
+        eiwG3Uk1lBYNeiwG3Uk1lBYNeiwG3Uk1lBYNeiwG3Uk1lBYNeiwG3Uk1lBYNeiwG3Uk1lBYNeiwG3Uk1
+        lBYNeiwG3Uk1lBYvxKmxTkF/E6tjXaRBd3oRTo11CvoUrI51kQbd6X2YEO7Cm/AyPBO/hIfifrgP7oaP
+        wlUw9aB3wmdg5pL5ZE5fwLPw53gLZp45nnuwOtZFGvRA/4VX4C/wdMzH6HvxuTiCqQX9bMzrzevO68+n
+        WuaRuVTHsQwNesXeiXlHvxYvwKNxZ1wGmx304/FwzOu6Dm/EvN7qOUdp0BMxH7fn4gn4Nuxh1UHvjzne
+        s/F6rB571Rr0BE3cf8R8TD8HW1lF0LvjdzDHl3fg6vE2U4OegTlF+RoehLvgAzEq6DzvF/FWrP7+lDTo
+        GXk3XoonYcWyg07EuaAdeRG3bA16pub2Vu4ebDwlWUbQe2IeN58K92P156esQc/cvGvn/vfemFti1Z9Z
+        5O34IszjzDHijRr0mngz9p4a3ItTvMDr0aB1rTRoXSsNWtfKBL0vbkmyWaYais7XXEu8Frcsb8EDdjAL
+        Ce/EwzB7LY7Hb+NpmOXpizEXUbnDkAux/DcXVtmBN/e7BJth5pb5bZ9nzDtt7rmfh6ditpPm5/BxPATf
+        hQfixp/bm/H1+FiUh8gr8QP4afwhJvrL8SrMUnb1g9xq5vZg5vErzHzOxxPx/fg6lBmQhYq8k3wMj8Mf
+        4DVY/cDXzey4S7SfwyPx7fhCfBjKGvJi/BReiVfjHViFMXWz0ph/pL/Bk/FlKFucJ2E2w2cT0k8wkVTx
+        TMWc8+a04St4BD4VRR6Qp+ObMN8uzy63XDBVYa3KBJw7CJfgO3BXFOnmKMw3QVa9kf42zHlwTo1Els5e
+        eCzegFWAyzKPfwy+CkVWQu4a5Dw276JVlA/WbEnNt69zH15k08h3ELPgU0Xa6jmYxQqRSZFFi9YLyFzo
+        5SJvDxSZLB/GRZv982sUPokis+AxmP0PO276z16TM/DRKDI7DsYsQSfm7CnJvgmRWZNbffndey5Ji4iI
+        iIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiIiEyXbdv+A6D/q968zbIdAAAA
+        AElFTkSuQmCC
 </value>
   </data>
 </root>
